# chip-8-emulator

./: CMakeLists.txt
include/: chip8.h  config.h  display.h  mem.h  register.h  stack.h  timer.h
src/: chip8.cpp  display.cpp  main.cpp  mem.cpp  register.cpp  stack.cpp
